--- a/materiales/templates/materiales/formularios_altas/alta_mapa.html
+++ b/materiales/templates/materiales/formularios_altas/alta_mapa.html
@@ -3,7 +3,7 @@
 <div data-block="content" data-form="mapa">
     <div class="row mb-3">
         <div class="col-md-4">
-            <label for="sede-mapa">Sede: <span style="color: red;">*</span></label>
+            <label for="sede-mapa" style="font-size: 14px;">Sede: <span style="color: red;">*</span></label>
             <select class="form-select select-sede" id="sede-mapa" name="sede_mapa" required>
                 <option value="">Seleccione una sede</option>
                 <option value="sede1">La Plata</option>
@@ -12,7 +12,7 @@
         </div>
 
         <div class="col-md-4">
-            <label for="input-nuevo-tipo-mapa">Tipo de Mapa: <span style="color: red;">*</span></label>
+            <label for="input-nuevo-tipo-mapa" style="font-size: 14px;">Tipo de Mapa: <span style="color: red;">*</span></label>
             <select class="form-select select-sede" id="input-nuevo-tipo-mapa" name="input-nuevo-tipo-mapa" required>
                 <option value="">Seleccione un tipo</option>
                 <option value="FISICO">FISICO</option>
@@ -23,7 +23,7 @@
         </div>
         
         <div class="col-md-4">
-            <label for="input-nueva-cant-mapa" class="form-label small">Cantidad <span class="text-danger">*</span></label>
+            <label for="input-nueva-cant-mapa" style="font-size: 14px;">Cantidad <span class="text-danger">*</span></label>
             <input type="number" class="form-control form-control-sm" id="input-nueva-cant-mapa" name="input-nueva-cant-mapa" min="1" value="1" required>
         </div>
     </div>
@@ -70,7 +70,6 @@
 
 <!-- Importación del JS dinámico de ejemplares -->
 <script src="{% static 'js/form_altas.js' %}"></script>
-<script src="{% static 'js/form_controller.js' %}"></script>
 
 <script>
     // Inicializar gruposTiposMapa si no existe
