--- a/materiales/templates/materiales/formularios_altas/alta_varios.html
+++ b/materiales/templates/materiales/formularios_altas/alta_varios.html
@@ -3,8 +3,8 @@
 <div data-block="content" data-form="varios">
     <div class="row mb-3">
         <div class="col-md-3">
-            <label for="sede" class="form-label small">Sede: <span class="text-danger">*</span></label>
-            <select class="form-control form-control-sm" id="sede-varios" name="sede_varios" required>
+            <label for="sede" style="font-size: 14px;">Sede: <span class="text-danger">*</span></label>
+            <select class="form-control custom-input" id="sede-varios" name="sede_varios" required>
                 <option value="">Seleccione una sede</option>
                 <option value="sede1">La Plata</option>
                 <option value="sede2">Abasto</option>
@@ -12,13 +12,13 @@
         </div>
         
         <div class="col-md-3">
-            <label for="tipo-varios" class="form-label small">Tipo a registrar <span class="text-danger">*</span></label>
-            <input type="text" class="form-control form-control-sm" id="tipo-varios" name="tipo_varios" required>
+            <label for="tipo-varios" style="font-size: 14px;">Tipo a registrar <span class="text-danger">*</span></label>
+            <input type="text" class="form-control custom-input" id="tipo-varios" name="tipo_varios" required>
         </div>
         
         <div class="col-md-3">
-            <label for="cant_ejemplares" class="form-label small">Cant. de ejemplares <span class="text-danger">*</span></label>
-            <input type="number" class="form-control form-control-sm" id="cant_ejemplares" name="cant_ejemplares" min="1" value="1" required>
+            <label for="cant_ejemplares" style="font-size: 14px;">Cant. de ejemplares <span class="text-danger">*</span></label>
+            <input type="number" class="form-control custom-input" id="cant_ejemplares" name="cant_ejemplares" min="1" value="1" required>
         </div>
         
         <div class="col-md-1 d-flex align-items-end">
@@ -57,7 +57,6 @@
 
 <!-- Importación del JS dinámico de ejemplares -->
 <script src="{% static 'js/form_altas.js' %}"></script>
-<script src="{% static 'js/form_controller.js' %}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         // Inicializar renderizado para formulario de varios
